<resources>
    <string name="app_name">receipt</string>
    <string name="title_activity_receipt_list">Transactions</string>
    <string name="title_activity_receipt_detail">Transaction Details</string>
    <string name="mobileTransactionDetailsHeader">Transaction details</string>
    <string name="transactions">Transactions</string>
    <string name="mobileTransactionTypeLabel">TRANSACTION</string>
    <string name="mobileFeeInfoLabel">FEE INFO</string>
    <string name="amount">Amount</string>
    <string name="mobileFeeLabel">Fee</string>
    <string name="mobileTransactionDetailsTotal">Transaction total</string>
    <string name="mobileTransactionDetailsLabel">DETAILS</string>
    <string name="mobileJournalNumberLabel">Receipt ID</string>
    <string name="date">Date</string>
    <string name="mobileMerchantTxnLabel">Transaction ID</string>
    <string name="mobileConfirmNotesLabel">NOTE</string>
    <string name="mobileCharityName">Charity name</string>
    <string name="mobileCheckNumber">Check number</string>
    <string name="mobilePromoWebsite">Promo website</string>
    <string name="concat_date_string_view_format">%s %s</string>

    <string name="mobileNoTransactionsUser">There\'s no activity to display.</string>
    <string name="mobileNoTransactionsPrepaidCard">No transactions in the past 365 days</string>
    <string name="title_transfer_funds">Transfer</string>
    <string name="font_icon_placeholder">\ue908</string>
    <string name="text_placeholder">Placeholder</string>

    <!-- entry types -->
    <string name="debit" translatable="false">\ue908</string>
    <string name="credit" translatable="false">\ue907</string>
    <string name="debit_sign" translatable="false">-%s</string>
    <string name="credit_sign" translatable="false">%s%s</string>

    <!--Generic fee types-->
    <string name="unknown_type">Unknown Transaction Type</string>
    <string name="annual_fee">Annual Fee</string>
    <string name="annual_fee_refund">Annual Fee Refund</string>
    <string name="customer_service_fee">Customer Service Fee</string>
    <string name="customer_service_fee_refund">Customer Service Fee Refund</string>
    <string name="expedited_shipping_fee">Expedited Shipping Fee</string>
    <string name="generic_fee_refund">Generic Fee Refund</string>
    <string name="monthly_fee">Monthly Fee</string>
    <string name="monthly_fee_refund">Monthly Fee Refund</string>
    <string name="payment_expiry_fee">Payment Expiration Fee</string>
    <string name="payment_fee">Payment Fee</string>
    <string name="processing_fee">Processing Fee</string>
    <string name="standard_shipping_fee">Standard Shipping Fee</string>
    <string name="transfer_fee">Transfer Fee</string>

    <!--Generic payment types-->
    <string name="adjustment">Balance Adjustment</string>
    <string name="foreign_exchange">Foreign Exchange</string>
    <string name="deposit">Payment</string>
    <string name="manual_adjustment">Adjustment</string>
    <string name="payment_expiration">Payment Expired</string>

    <!--Bank account-specific types-->
    <string name="bank_account_transfer_fee">Bank Account Return Fee</string>
    <string name="bank_account_transfer_return">Bank Account Return</string>
    <string name="bank_account_transfer_return_fee">Bank Account Return Fee</string>
    <string name="transfer_to_bank_account">Bank Account</string>

    <!--Card-specific types-->
    <string name="card_activation_fee">Card Activation Fee</string>
    <string name="card_activation_fee_waiver">Card Activation Fee Waiver</string>
    <string name="card_fee">Card Fee</string>
    <string name="manual_transfer_to_prepaid_card">Transfer to Card</string>
    <string name="prepaid_card_balance_inquiry_fee">Balance Inquiry Fee</string>
    <string name="prepaid_card_cash_advance">Cash Advance</string>
    <string name="prepaid_card_disputed_charge_refund">Disputed Charge Refund</string>
    <string name="prepaid_card_dispute_deposit">Disputed Card Deposit</string>
    <string name="prepaid_card_domestic_cash_withdrawal_fee">ATM Withdrawal</string>
    <string name="prepaid_card_exchange_rate_difference">PREPAID_CARD_EXCHANGE_RATE_DIFFERENCE
    </string>
    <string name="prepaid_card_manual_unload">Transfer from Card</string>
    <string name="prepaid_card_overseas_cash_withdrawal_fee">ATM Withdrawal</string>
    <string name="prepaid_card_pin_change_fee">PIN Change Fee</string>
    <string name="prepaid_card_refund">Refund</string>
    <string name="prepaid_card_replacement_fee">Card Replacement Fee</string>
    <string name="prepaid_card_sale">Transaction</string>
    <string name="prepaid_card_sale_reversal">Reversed Transaction</string>
    <string name="prepaid_card_unload">Transfer from Card</string>
    <string name="transfer_to_prepaid_card">Transfer to Card</string>
    <!---->
    <!--Donation types-->
    <string name="donation">Donation</string>
    <string name="donation_fee">Donation Fee</string>
    <string name="donation_return">Donation Return</string>
    <!---->
    <!--Merchant payment types-->
    <string name="merchant_payment">Merchant Payment</string>
    <string name="merchant_payment_fee">Merchant Payment Fee</string>
    <string name="merchant_payment_refund">Merchant Payment Refund</string>
    <string name="merchant_payment_return">Merchant Payment Return</string>
    <!---->
    <!--MoneyGram types-->
    <string name="moneygram_transfer_return">MoneyGram Return</string>
    <string name="transfer_to_moneygram">MoneyGram</string>
    <!---->
    <!--Paper check types-->
    <string name="paper_check_fee">Paper Check Fee</string>
    <string name="paper_check_refund">Paper Check Refund</string>
    <string name="transfer_to_paper_check">Paper Check</string>
    <!---->
    <!--User and program account types-->
    <string name="account_closure">Account Closure</string>
    <string name="account_closure_fee">Account Closure Fee</string>
    <string name="account_unload">Funds Return</string>
    <string name="dormant_user_fee">Dormant User Account Fee</string>
    <string name="dormant_user_fee_refund">Dormant User Account Fee Refund</string>
    <string name="payment">Payment</string>
    <string name="payment_cancellation">Payment Cancellation</string>
    <string name="payment_reversal">Payment Reversal</string>
    <string name="payment_reversal_fee">Payment Reversal Fee</string>
    <string name="payment_return">Payment Return</string>
    <string name="transfer_to_program_account">Transfer to Program</string>
    <string name="transfer_to_user">Transfer to User</string>
    <string name="transfer_to_paypal_account">PayPal</string>
    <string name="transfer_to_bank_card">Bank Card</string>
    <string name="transfer_to_debit_card">Debit Card</string>
    <string name="prepaid_card_transfer_return">Prepaid Card Load Return</string>
    <string name="transfer_to_venmo_account" translatable="false" >Venmo</string>
    <!---->
    <!--Virtual incentive types-->
    <string name="virtual_incentive_cancellation">Promo Cancellation</string>
    <string name="virtual_incentive_issuance">Issued Promo</string>
    <string name="virtual_incentive_purchase">Promo Purchase</string>
    <string name="virtual_incentive_refund">Promo Refund</string>
    <!---->
    <!--Western Union and WUBS types-->
    <string name="transfer_to_western_union">Western Union</string>
    <string name="transfer_to_wubs_wire">Wire Transfer</string>
    <string name="western_union_transfer_return">Western Union Withdrawal</string>
    <string name="wubs_wire_transfer_return">Wire Transfer Return</string>
    <!---->
    <!--Wire transfer types-->
    <string name="transfer_to_wire">Wire Transfer</string>
    <string name="wire_transfer_fee">Wire Transfer Fee</string>
    <string name="wire_transfer_return">Wire Transfer Return</string>

    <!-- New exposed receipt types -->
    <string name="paypal_account_transfer_return">Cashout Return</string>
    <string name="venmo_account_transfer_return">Cashout Return</string>
    <string name="prepaid_card_account_deposit">Account Deposit</string>
    <string name="prepaid_card_annual_fee_discount">Annual fee discount</string>
    <string name="prepaid_card_bill_reprint_fee">Bill Reprint Fee</string>
    <string name="prepaid_card_atm_or_cash_advance_fee">ATM/Cash Advance Fee</string>
    <string name="prepaid_card_cash_advance_chargeback">Cash Advance Chargeback</string>
    <string name="prepaid_card_cash_advance_chargeback_reversal">Cash Advance Chargeback Reversal</string>
    <string name="prepaid_card_cash_advance_repress">Cash Advance Repress</string>
    <string name="prepaid_card_cash_advance_repress_reversal">Advance Repress Reversal</string>
    <string name="prepaid_card_chargeback">Chargeback</string>
    <string name="prepaid_card_chargeback_refund">Chargeback Refund</string>
    <string name="prepaid_card_chargeback_refund_reversal">Chargeback Refund Reversal</string>
    <string name="prepaid_card_chargeback_reversal">Chargeback Reversal</string>
    <string name="prepaid_card_commission_or_fee">Fee/Commission</string>
    <string name="prepaid_card_debit_transfer">Debit/Transfers</string>
    <string name="prepaid_card_document_request_fee">Document Request Fee</string>
    <string name="prepaid_card_emergency_cash">Emergency Money</string>
    <string name="prepaid_card_emergency_card">Emergency Card</string>
    <string name="prepaid_card_income">Income</string>
    <string name="prepaid_card_load_fee">PAN Fee</string>
    <string name="prepaid_card_refund_fee">Refund Fee</string>
    <string name="prepaid_card_monthly_maintenance_fee">Monthly Maintenance Fee</string>
    <string name="prepaid_card_transaction_fee">Transaction Fee</string>
    <string name="prepaid_card_sms_fee">SMS Fee</string>
    <string name="prepaid_card_declined_authorization_fee">Declined Authorization Fee</string>
    <string name="fispc">Purchase</string>

    <!-- Prepaid Cards Receipt   -->
    <string name="mobileAvailableBalances">Available funds</string>

</resources>
