...
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextAppearance="@style/TextAppearance.Hyperwallet.Headline5"
            app:layout_collapseMode="pin"
            app:navigationContentDescription="@string/navigate_back_description"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
...
